MasterControllerを追加する。
