# src/api/api.ts
@@ -1,3 +1,5 @@
+export * from './masterController.service';
+import { MasterControllerService } from './masterController.service';
 export * from './sampleFormController.service';
 import { SampleFormControllerService } from './sampleFormController.service';
-export const APIS = [SampleFormControllerService];
+export const APIS = [MasterControllerService, SampleFormControllerService];
